# ruinaio

./: .gitignore  .gitmodules  Cargo.toml  README.md  apispec.yaml
app/: Cargo.toml  Trunk.toml  index.html
app/src/: app.rs  lib.rs  main.rs  menu.rs
app/src/input/: mod.rs  title.rs
app/src/node/: editor.rs  mod.rs  viewer.rs
docs/: book.toml
docs/src/: SUMMARY.md  node.md
migrations/: 20220906125948_init.sql
model/: Cargo.toml
model/src/: error.rs  lib.rs  node.rs  params.rs  patch.rs  slug.rs
src/: db.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  node.rs
