[package]
name = "ruinaio-app"
version = "0.1.0"
authors = ["frostu8 <frostu8@protonmail.com>"]
edition = "2021"

[dependencies]
# use bleeding edge of Yew because 0.19 is lame
yew = { git = "https://github.com/yewstack/yew/" }
reqwest = { version = "0.11", features = ["json"] }
ruinaio-model = { path = "../model" }

[features]
default = ["csr"]
csr = ["yew/csr"]
