[package]
name = "ruinaio-app"
version = "0.1.0"
authors = ["frostu8 <frostu8@protonmail.com>"]
edition = "2021"

[dependencies]
# use bleeding edge of Yew because 0.19 is lame
yew = { git = "https://github.com/yewstack/yew/" }
gloo = "0.8"
reqwest = { version = "0.11", features = ["json"] }
ruinaio-model = { path = "../model" }
pulldown-cmark = "0.9.2"

[features]
default = ["csr"]
csr = ["yew/csr"]
